--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -19,16 +19,17 @@
         }
 
         &--right {
+            position: relative;
             grid-column: col-start 8 / -1;
             grid-row: 1 / 3;
+            height: 100%;
         }
 
         @include respond(tab-portrait) {
             height: initial;
             padding: 13rem 0 9rem 0;
 
-            &--left,
-            &--right {
+            &--left {
                 grid-row: 1 / 2;
             }
         }
@@ -84,12 +85,9 @@
         }
     }
 
-    // These block will be overrided by
-    // -> _home.scss
     &__img {
         width: 100%;
-        display: block;
-        margin: 0 auto;
+        @include absCenterY;
     }
 
     &__page-location {
