--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -5,11 +5,16 @@
     font-weight: 600;
     text-transform: uppercase;
     border-radius: .4rem;
-    padding: .9rem 2.3rem;
+    padding: .8rem 1.8rem;
     cursor: pointer;
     display: inline-block;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     transition: all .3s;
+
+    @include respond(tab-portrait-s) {
+        padding: 1rem 1.9rem;
+        font-size: 1.5rem;
+    }
 }
 
 .button-primary {
@@ -22,10 +27,10 @@
     }
 
     &--shw-black {
-        box-shadow: .6rem .6rem 0 $box-shadow-color-black;
+        box-shadow: 0 0 1rem $box-shadow-color-black;
 
-        &:hover { box-shadow: .8rem .8rem 0 $box-shadow-color-black; transform: translateY(-3px) }
-        &:active { box-shadow: .6rem .6rem 0 $box-shadow-color-black; transform: translateY(0) }
+        &:hover { box-shadow: 0 0 1.7rem $box-shadow-color-black; transform: translateY(-3px) }
+        &:active { box-shadow: 0 0 1rem $box-shadow-color-black; transform: translateY(0) }
     }
 
     &--blue {
@@ -52,8 +57,12 @@
 }
 
 .button-tertiary {
-    padding: 1rem 2.3rem;
+    padding: .9rem 1.8rem;
     background-color: transparent;
+
+    @include respond(tab-portrait-s) {
+        padding: 1.2rem  1.9rem;
+    }
 
     &--white {
         color: $color-white;
