--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -37,6 +37,7 @@
         @include respond(tab-portrait-s) {
             grid-template-rows: repeat(2, min-content);
             padding: 15rem 0 9rem 0;
+            grid-row-gap: 0;
             
             &--left {
                 grid-column: col-start 2 / col-end 11;
