--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -147,6 +147,31 @@
     }
 }
 
+.heading-secondary {
+    line-height: 1.1;
+    font-size: 2.6rem;
+    font-weight: 600;
+    text-transform: capitalize;
+    letter-spacing: .5px;
+    text-shadow: 0 3px 6px rgba($color-black, .16);
+
+    &--white {
+        color: $color-white;
+    }
+
+    &--blue {
+        color: $primary-color;
+    }
+}
+
+.bannerone {
+    @include respond(phone) {
+        &__left > *:not(a) {
+            color: $color-black;
+        }
+    }
+}
+
 .footer {
     &__heading {
         font-size: 1.6rem;
