--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 
 @import "components/button";
 @import "components/social";
+@import "components/banner-one";
 
 @import "pages/home";
 @import "pages/tertiarypages";
